style.css
*::before,
*,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

*:focus {
  outline: none;
  box-shadow: 0 0 0 3px rgba(0, 0, 255, 0.5);
}

body {
  font-family: sans-serif;
  font-size: 18px;
  color: #24292e;
  border-top: 10px solid #ffe0e0;
}

.main,
.footer {
  padding: 1em;
}

.footer {
  background: whiteSmoke;
}

.footer__credits {
  margin-bottom: 1em;
}

.footer__credits__item {
  margin-bottom: 0.25em;
  list-style-position: inside;
}

.footer__credits__link,
.footer__link {
  text-decoration: none;
  font-weight: 600;
  color: black;
}

.footer__credits__link:hover,
.footer__link:hover {
  opacity: 0.85;
}

.footer__link {
  display: block;
  margin-bottom: 1em;
}

input,
select,
button {
  border: 0;
  background: none;
  font: inherit;
  color: inherit;
}

h1 {
  color: #333;
}

.sub-title {
  color: #626262;
  margin-bottom: 1em;
}

h2 {
  margin-top: 1em;
  margin-bottom: 0.5em;
}

.faded {
  transition: opacity 1s ease-out;
}

.faded--active {
  opacity: 0.35;
}

.input {
  margin-bottom: 0.75em;
}

.input__label {
  display: block;
  margin-bottom: 0.5em;
}

.input__field,
.input__select {
  padding: 0.5em 0.75em;
  background: white;
  border: 3px solid black;
}

.input__field:disabled,
.input__select:disabled {
  background: lightgrey;
  border-color: lightgrey;
  cursor: initial;
}

.button {
  margin-right: 0.75em;
  margin-bottom: 0.75em;
  padding: 0.5em 1em;

  font-weight: 700;
  border-radius: 5px;
  border: 3px solid transparent;
  cursor: pointer;

  transition: all 0.1s ease-in-out;
}

.button:hover {
  opacity: 0.85;
}

.button--bigger {
  margin-right: 0.5em;
  padding: 0.65em 1em;
  font-size: 1.75em;
  border-width: 4px;
}

.button--primary {
  background: #00823b;
  border-color: #00823b;
  color: white;
}

.button--secondary {
  background: white;
  border-color: #ffcc66;
  color: black;
}

.button:disabled {
  background: lightgrey;
  border-color: lightgrey;
  cursor: initial;
}

.toggle {
  margin-bottom: 0.75em;
  display: flex;
  align-items: center;
}

.toggle__button {
  position: relative;
  display: flex;
  width: 100px;
  padding: 0.5em 1em;
  padding-left: 2.5em;
  margin-right: 1em;
  align-items: center;
  justify-content: flex-end;

  font-weight: 700;

  border-radius: 50px;
  border: 3px solid #ffcc66;
  background: white;

  cursor: pointer;
  transition: all 0.1s ease-in-out;
}

.toggle__button:hover {
  opacity: 0.95;
}

.toggle__button--active {
  padding-left: 1em;
  padding-right: 2.5em;
  justify-content: flex-start;
  background: #ffcc66;
}

.toggle__button::before {
  content: "";
  position: absolute;
  left: 5px;
  width: 30px;
  height: 30px;
  border-radius: 50%;
  background: black;
  transition: left 0.1s ease-out;
}

.toggle__button--active::before {
  left: calc(100% - 30px - 5px);
}

.timer {
  display: block;
  margin: 0.5em 0;
  font-weight: 700;
  font-size: 4em;
}

.loader {
  display: inline-block;
  position: relative;
  width: 50px;
  height: 50px;
  transform-origin: 10% 90%;
}

@keyframes loaderMove {
  to {
    transform: translateY(5px) rotate(5deg);
  }
}

.loader--active {
  animation: loaderMove 0.5s 0.5s linear infinite alternate;
}

.loader__bar,
.loader__image {
  position: absolute;
  width: 100%;
  height: 100%;
}

.loader__bar {
  mix-blend-mode: saturation;
  background: white;
  height: 0%;
  bottom: 0;
  transition: height 1s linear;
}

.disabled-message {
  margin-top: -0.05em;
  margin-bottom: 0.5em;

  font-size: 0.85em;
  color: #585858;
}

@media (min-width: 600px) {
  body {
    font-size: 19px;
    border: none;
    background-image: linear-gradient(
      15deg,
    white,
    white 95%,
    #ffe0e0 95%,
    #ffe0e0
    );
  }

  .timer {
    margin: 0.25em 0;
    font-size: 6em;
  }

  .loader {
    width: 90px;
    height:  90px;
  }
}

@media (min-width: 900px) {
  body {
    font-size: 20px;
    background-image: linear-gradient(
      110deg,
      white,
      white 60%,
      #ffe0e0 60%,
      #ffe0e0
    );
  }

  .main,
  .footer {
    padding: 2em;
  }

  .timer {
    margin: 0;
    font-size: 10em;
  }

  .loader {
    width: 120px;
    height: 120px;
  }
}

